<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#C0C0C0"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#000000"
        android:shadowColor="#FFFFFF"
        android:shadowDx="0.5"
        android:shadowDy="0.5"
        android:shadowRadius="0.5"
        android:text="@string/app_name"
        android:textSize="25sp"
        android:typeface="serif"
        android:layout_weight="1"
        android:gravity="fill_vertical"/>

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/announcement"
            android:id="@+id/button"
            android:layout_gravity="center"
            android:enabled="true"
            android:focusable="false"
            android:clickable="false"
            android:layout_weight="0"
            android:layout_marginTop="20dp"
            android:typeface="sans"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="left|top"
            android:background="@drawable/blue_button_layout"
            android:textColor="#FFFFFF"
            android:padding="20dp"
            android:shadowDx="0.7"
            android:shadowDy="0.7"
            android:shadowRadius="0.5"
            android:shadowColor="@color/DrBlue"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:textColor="#9A9A9A"
        android:shadowColor="#FFFFFF"
        android:shadowDx="0.5"
        android:shadowDy="0.5"
        android:shadowRadius="0.5"
        android:text="@string/copyright"
        android:textSize="15sp"
        android:typeface="serif"
        android:gravity="bottom"
        android:layout_weight="0"
            />

</LinearLayout>